"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2012-10-16	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-86-51:
	  Renamed all .h C++ files to .hh to disambiguate.


2012-10-11	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-86-50:
	  Merged clangification branch to master!
	  Merged prsim-engine-rewrite branch to master!


2012-10-08	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-86-49b-clangification-01:
	  Added explicit default copy-ctor and assignment member functions
		to a few structs to workaround clang-3.1's 
		buggy synthesis of those methods.  :(
		This fixes prsim, but vpi-prsim still crashes.


2012-10-02	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-86-49b:
	  vpi-prsim.cc: enable optimistic (non-polling) callback scheduling,
		which significantly increases performance (15%+)
		by reducing the number of unnecessary callbacks.
		This was enabled by fix in previous patch.


2012-10-01	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-86-49:
	  vpi-prsim.cc: __advance_prsim, keep executing events at the 
		same time to accumulate multiple to-vcs breakpoints.
		This re-enables setting-node-immediately (bypassing
			event queue) to work with cosim.


2012-09-27	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-86-49:
	  vpi-prsim: revert most of previous patch, 
		both pieces found to crash larger cosim tests.  :(
		Keeping stop_on_vacuous_events.


	* HACKT-00-01-04-main-00-86-48:
	  vpi-prsim: re-wrote scheduling of callback events to NOT
		poll every single time unit, but advance by a conservative 
		time difference until next event.  Should be faster!
		Also stops on vacuous events, to make it easier to 
		determine proper callback time, otherwise can result