@@ -1,0 +1,10 @@
+/**
+	\file "AST/parser_globals.hh"
+	This file intentionally left blank.
+ */
+
+#ifndef	__HAC_AST_PARSER_GLOBALS_HH__
+#define	__HAC_AST_PARSER_GLOBALS_HH__
+
+#endif	// __HAC_AST_PARSER_GLOBALS_HH__
+
