@@ -1,0 +1,31 @@
+/**
+	\file "lexer/flex_lexer_common.hh"
+	$Id: $
+ */
+
+#ifndef	__HAC_LEXER_FLEX_LEXER_COMMON_HH__
+#define	__HAC_LEXER_FLEX_LEXER_COMMON_HH__
+
+#include "lexer/flex_lexer_state.hh"
+#include "lexer/flex_buffer_state.hh"	// auto-generated
+#include "util/macros.h"
+
+// TODO: re-generate "flex_lexer_common.cc" as member functions?
+
+// generated by flex (and re-written by scripts):
+extern
+YY_BUFFER_STATE
+yy_scan_string(const char*, flex::lexer_state&);
+// defined in generated "lexer/flex_lexer_common.cc"
+
+#ifdef	LEXER_HAS_YYLEX_DESTROY
+extern
+int
+yylex_destroy(flex::lexer_state&);
+#else	// LEXER_HAS_YYLEX_DESTROY
+extern
+void
+yy_delete_buffer(YY_BUFFER_STATE, flex::lexer_state&);
+#endif	// LEXER_HAS_YYLEX_DESTROY
+
+#endif	// __HAC_LEXER_FLEX_LEXER_COMMON_HH__
